--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   http: ^1.2.2
+  encrypt_shared_preferences: ^0.8.2
+  toastification: ^2.3.0
+  freezed_annotation: ^2.4.4
+  firebase_auth: ^5.4.0
+  google_sign_in: ^6.2.2
+  firebase_core: ^3.10.0
+
+
 
 
 
@@ -49,12 +57,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+
   flutter_lints: ^4.0.0
+  melos: ^6.2.0
+  freezed: ^2.5.7
+  build_runner: ^2.4.13
 
 
 # For information on the generic Dart part of this file, see the
