--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dev_dependencies:
   melos: ^6.2.0
   freezed: ^2.5.7
   build_runner: ^2.4.13
+  bloc_test: ^9.0.0
+  mockito: ^5.0.17
+  test: ^1.16.0
+
 
 
 # For information on the generic Dart part of this file, see the
