--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   firebase_auth: ^5.4.0
   google_sign_in: ^6.2.2
   firebase_core: ^3.10.0
-
+  json_annotation: ^4.8.0
 
 
 
@@ -65,6 +65,7 @@ dev_dependencies:
   bloc_test: ^9.0.0
   mockito: ^5.0.17
   test: ^1.16.0
+  json_serializable: ^6.6.0
 
 
 
