--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   google_sign_in: ^6.2.2
   firebase_core: ^3.10.0
   json_annotation: ^4.8.0
+  responsive_framework: 0.2.0
+
 
 
 
